# dnq_rust

./: .editorconfig  Cargo.toml  LICENSE  config.yaml
config/: Cargo.toml
config/src/: config.rs  lib.rs
config/tests/: config.rs  config.yaml
resources/: README.txt  certs.sh  server.key  server.pem
src/: lib.rs  main.rs
src/endpoints/: mod.rs
src/utils/: env.rs  mod.rs  tests.rs
telegram/: Cargo.toml
telegram/src/: demo.rs  lib.rs  main.rs  objects.rs  services.rs
telegram/tests/resources/: inline-query.json  message.json  voice.json
