[package]
name = "telegram"
version = "0.1.0"
edition = "2021"
description = "plain and very basic api for telegram"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq="2.8.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_yaml = "0.9.25"
serde_json = "1.0.107"
stringreader = "0.1.1"

[dependencies.uuid]
version = "1.5.0"
features = [
	"v4",                # Lets you generate random UUIDs
	"fast-rng",          # Use a faster (but still sufficiently random) RNG
	"macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]